--- a/404.html
+++ b/404.html
@@ -5,4 +5,7 @@ permalink: /404.html
 ---
 <meta http-equiv="refresh" content="5; url=/">
 
-Page could not be found :(
+## 404 - Page not found
+---
+
+Page cannot be found, redirecting to <a href="/">main</a> page in 5 seconds...
