--- a/404.html
+++ b/404.html
@@ -3,9 +3,14 @@ title: 404
 layout: rancher-default-v1.6
 permalink: /404.html
 ---
-<meta http-equiv="refresh" content="5; url=/">
+<meta http-equiv="refresh" content="10; url=/">
 
-## 404 - Page not found
----
+<div class="col span-8">
+    <div class="content-container">
+        <h2>404 - Page not found</h2>
+        <hr />
 
-Page cannot be found, redirecting to <a href="/">main</a> page in 5 seconds...
+        <p>This page cannot be found, maybe it does not exist in a older/newer version of the documentation. Redirecting you to the <a href="/">main page</a> of the latest documentation in 10 seconds...</p>
+
+    </div>
+</div>
